# orcawriter

./: LICENSE  README.md  setup.cfg
orcawriter/: calculation.py  calculation_dep.py  orca_input_template.txt  util.py
src/orcawriter/: __init__.py  calculation.py  note.txt  param.py  requirements.txt  xyz.py
src/orcawriter/templates/: orca_input_template.txt
src/tests/: inp_tst_template.txt  test_calculation.py
src/tests/data/: inp_tst_template.txt  tst_default_params.ini  tst_xyz_data.xyz
