[metadata]
name = orcawriter2
version = 0.0.2
author = Sean McWilliams
author_email = sfmcwilliams@gmail.com
description = A small package for writing ORCA scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/McTrilliams/orcawriter.git

project_urls =
    Bug Tracker = https://github.com/McTrilliams/orcawriter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src